--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,7 @@
 $light-blue: #CEF0FF;
 $med-blue: #7c9aae;
 $dark-blue: #18204C;
+$dark-green: #327c24;
 $label-color: #ccc;
 $right-pane-bg-img: image-url('background/forest-trail-transparent.png');
 
@@ -97,7 +98,7 @@ fieldset{
   border-radius: 5px;
 }
 
-fieldset input[type='text'], fieldset input[type='number'], fieldset input[type='password'], fieldset textarea, .wideform textarea, .wideform input[type='text'], input[type='number']{
+.record-cntr input[type='text'], .record-cntr input[type='number'], .record-cntr input[type='password'], .record-cntr textarea, .wideform textarea, .wideform input[type='text']{ 
   width:99%;
   border: solid 1px $med-blue;
   border-radius: 4px;
@@ -243,11 +244,11 @@ nav a:hover, #authentication a:hover{
 .edu-button {
     margin: 10px 15px;
     
-    background: -webkit-linear-gradient(top , #73B844, #62AC44) repeat scroll 0 0 #62AC44;
-    background:    -moz-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
-    background:    -moz-linear-gradient(top , #fff, #62AC44) repeat scroll 0 0 #62AC44;
-    background:     -ms-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
-    background:      -o-linear-gradient(center top , #73B844 50%, #62AC44 100%) repeat scroll 0 0 #62AC44;
+    background: -webkit-linear-gradient(top , #73B844, $dark-green) repeat scroll 0 0 $dark-green;
+    background:    -moz-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
+    background:    -moz-linear-gradient(top , #fff, $dark-green) repeat scroll 0 0 $dark-green;
+    background:     -ms-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
+    background:      -o-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
     
     border: 3px solid #eee;
     font-size: 26px;
@@ -275,7 +276,7 @@ nav a:hover, #authentication a:hover{
 }
 
 .edu-button:hover {
-    background: -moz-linear-gradient(center top , #62AC44 50%, #73B844 100%) repeat scroll 0 0 #73B844;
+    background: -moz-linear-gradient(center top , $dark-green 50%, #73B844 100%) repeat scroll 0 0 #73B844;
 }
 .edu-button.cancel {
     background: -moz-linear-gradient(center top , #999488 50%, #888888 100%) repeat scroll 0 0 #888888;
