--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -20,35 +20,32 @@
 
 %h2 Add a Milestone
 
-= form_for(@goal.milestones.build, :remote => true) do |f|
-  #milestone_errors{:style=>'display:none'}
-  %fieldset
-    %legend
-      Milestone
-    .field
-      = f.label :title 
-      %br
-      = f.text_field :title 
-    .field
-      = f.label :long_description
-      %br
-      = f.text_area :long_description
-    .field
-      = f.label :target_datetime, 'Target Date'
-      %br
-      = f.text_field :target_datetime, :class => "datetime-field"
-    .field
-      = f.label :completed_at, 'Completed Date'
-      %br
-      = f.text_field :completed_at, :class => "datetime-field"
-    .field
-      = f.label :point_value
-      %br
-      = f.number_field :point_value
+.record-cntr
+  = form_for(@goal.milestones.build, :remote => true) do |f|
+    #milestone_errors{:style=>'display:none'}
+    %fieldset
+      %legend
+        Milestone
+      .field
+        = f.label :title 
+        %br
+        = f.text_field :title 
+      .field
+        = f.label :long_description
+        %br
+        = f.text_area :long_description
+      .field
+        = f.label :target_datetime, 'Target Date'
+        %br
+        = f.text_field :target_datetime, :class => "datetime-field"
+      .field
+        = f.label :point_value
+        %br
+        = f.number_field :point_value
 
-    .actions
-      = f.hidden_field :goal_id 
-      = f.submit
+      .actions
+        = f.hidden_field :goal_id 
+        = f.submit
 
-= link_to 'Edit', edit_goal_path(@goal)
-= link_to 'Back', goals_path 
+  = link_to 'Edit', edit_goal_path(@goal)
+  = link_to 'Back', goals_path 
