--- a/app/views/milestones/_form.html.haml
+++ b/app/views/milestones/_form.html.haml
@@ -22,11 +22,11 @@
   .field
     = f.label :target_datetime, 'Target Date'
     %br
-    = f.text_field :target_datetime, :class => "datetime-field"
+    = f.text_field :target_datetime, :class => "datetime-field", :value => @milestone.try(:target_datetime).try(:strftime,'%Y-%m-%d')
   .field
     = f.label :completed_at
     %br/
-    = f.text_field :completed_at, :class => "datetime-field"
+    = f.text_field :completed_at, :class => "datetime-field", :value => @milestone.try(:completed_at).try(:strftime,'%Y-%m-%d')
   .field
     = f.label :goal
     %br/
