--- a/app/views/milestones/complete.js.erb
+++ b/app/views/milestones/complete.js.erb
@@ -1,10 +1,8 @@
-/*Update the html of the div flash_notice with the new one*/
-$("#flash_notice").html("<%= escape_javascript(flash[:notice])%>");
-
-/*Show the flash_notice div*/
-$("#flash_notice").show(300);
-
+/*Update the html of the div flash_notice and show it */
+$("#flash_notice").html("<%= escape_javascript(flash[:notice])%>").show(300);
 /* Update completed milestone in milestones list, change bg, then highlight */
 $("#milestone_<%= @milestone.id %>").addClass('completed').effect("highlight", {}, 3000);
 /* remove finish button */
 $("#milestone_<%= @milestone.id %>").find("input[type='submit']").hide().parent().append('complete');
+/* update percentage for goal */
+$("#goal_<%= @milestone.goal.id %> .completed-cell").html("<%= number_to_percentage(@milestone.goal.percent_complete, :precision => 1) %>").effect("highlight", {}, 3000);
