--- a/app/views/milestones/_milestone.html.haml
+++ b/app/views/milestones/_milestone.html.haml
@@ -1,4 +1,4 @@
-= content_tag_for( :div, milestone, :class => (milestone.completed_at ? 'record completed' : 'record')) do
+= content_tag_for( :div, milestone, :class => (milestone.completed_at ? 'record completed' : 'record todo')) do
   = link_to(milestone.title, milestone, :class => 'record-title')
   .row.target
     %span.record-label point value 
