--- a/app/views/goals/index.html.haml
+++ b/app/views/goals/index.html.haml
@@ -5,4 +5,4 @@
     = link_to 'Show', goal 
     = link_to 'Edit', edit_goal_path(goal) 
     = link_to 'Destroy', goal, confirm: 'Are you sure?', method: :delete 
-= link_to 'New Goal', new_goal_path 
+= link_to 'New Goal', goal_wizard_path
