--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
  *= require reset
  *= require_self
  *= require_tree . 
+ *= require jquery.popbox
 */
 
 button, input[type="button"], input[type="reset"], input[type="submit"] {
