--- a/app/views/content/about.html.haml
+++ b/app/views/content/about.html.haml
@@ -21,7 +21,7 @@
 %p
   Setting a
   %i deadline
-  is the best way to reach your goal faster.  Life comes at us all at once.  Knowing when you need to accomplish something helps to give some order to things and sort them out.  It's just one way to decide when you should be working on what tasks.  If something is due tomorrow, you're more likely to work on it today.  If something else isn't due until next month, it might not be the best use of your time, right now.
+  is the best way to reach your goal faster.  Life comes at us all at once.  Knowing when you need to accomplish something helps to give some order to things and sort them out.  It's just one way to decide when you should be working on what tasks.  If something is due tomo.record-row, you're more likely to work on it today.  If something else isn't due until next month, it might not be the best use of your time, right now.
 %h2 Plan
 %p
   Setting a goal with a deadline and breaking up the work into measurable milestones is called a
@@ -42,7 +42,7 @@
 %p
   We spoil our kids.  We lavish them with almost anything they want because we can.  Don't try to pretend you're not in that boat.  Your kids have things we never even dreampt of and yet we all feel guilt, as parents, when our kids want of anything.  Its human nature.
 %p On the flip side, we worry that our children don't appreciate their belongings and opportunities because they've never known  anything different.  We feel guilt because we're too generous.  Danged if you do, danged if you don't!  Earning something is the best way to appreciate it.
-%p Allowance is our parents' greatest con.  It's taught us that just showing up is all it takes.  Walk the garbage out to the curb and you'll collect your pay.  When you grow up, I'm sure there's a factory that will be glad to have you.  Is this what we really want our kids to learn?  Given the structure of Educentives, we have a platform for negotiation that our kids can use to extort from us the things they want.  When we deliver, we can do so with pride and satisfaction.  We've successfully convinced our children to overcome the challenges we wish for them and taught them entrepreneurship in the process.  All we had to give up was something we would have had to buy anyway.  Win, win, win.
+%p Allowance is our parents' greatest con.  It's taught us that just showing up is all it takes.  Walk the garbage out to the curb and you'll collect your pay.  When you .record-row up, I'm sure there's a factory that will be glad to have you.  Is this what we really want our kids to learn?  Given the structure of Educentives, we have a platform for negotiation that our kids can use to extort from us the things they want.  When we deliver, we can do so with pride and satisfaction.  We've successfully convinced our children to overcome the challenges we wish for them and taught them entrepreneurship in the process.  All we had to give up was something we would have had to buy anyway.  Win, win, win.
 %h2 Measuring
 %p You can't predict when you might reach your goal unless you know where you started and how far you've come.  Anything else is just a guess.  
 %h3 Points
