--- a/app/views/shared/_popbox.html.haml
+++ b/app/views/shared/_popbox.html.haml
@@ -2,7 +2,7 @@
   %a.help-trigger.open{:href => "#"}
   .collapse
     .box
-      .arrow
-      .arrow-border
+      .a.record-row
+      .a.record-row-border
       = pop_content
       %a.close{:href => "#"} close
