--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -4,6 +4,7 @@ $dark-blue: #18204C;
 $dark-green: #327c24;
 $label-color: #ccc;
 $light-grey: #fafafa;
+
 // layout and general //-----------------------------------------
 
 body {
@@ -39,12 +40,32 @@ h3{
   position:relative;
   width: 100%;}
 
+#main-content{
+  min-height: 20px;
+  padding: 10px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  
+}
+
 #content{
   margin:0 auto;
   width:960px;
   background: image-url('/assets/background/forest-trail-transparent.png') no-repeat scroll bottom right $light-blue;
   border-radius: 10px;
-  
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
   position:relative;}
 
@@ -71,11 +92,8 @@ h3{
 	position:relative;
 	width: 960px;
 	margin:8px auto;
-	border:solid 1px $light-blue;
 	border-radius: 10px;
-	min-height:10px;
 	color: #bbb;
-	box-shadow: 0 3px 2px rgba(0, 0, 0, 0.1);
 }
 
 #footer a, #header a{
@@ -90,6 +108,7 @@ h3{
 	height: 75px;
 	min-height: 75px;
 	position: relative;
+  float: left;
 }
 
 p, ol, ul, td {
