--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,24 +44,24 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div id="header" class="brand">
-            <div id="logo"><%= link_to raw("<span>Educentives</span>"), root_path, :id => 'home-link' %></div>
-            <div id="authentication">
-              <% if current_user %>
-                &nbsp;Logged in as <%= current_user.username %>
-                <%= link_to "Log out", logout_path %>
-              <% else %>
-                <%= link_to "Sign up", signup_path %> or
-                <%= link_to "Log in", login_path %>
-              <% end %>
-            </div><!--/#authenitcation -->
-          </div><!--/#header-->
 
-          <div class="container nav-collapse">
+          <div id="authentication">
+            <% if current_user %>
+              &nbsp;Logged in as <%= current_user.username %>
+              <%= link_to "Log out", logout_path %>
+            <% else %>
+              <%= link_to "Sign up", signup_path %> or
+              <%= link_to "Log in", login_path %>
+            <% end %>
+          </div><!--/#authenitcation -->
+
+          <div id="logo"><%= link_to raw("<span>Educentives</span>"), root_path, :id => 'home-link' %></div>
+
+
+          <div class="nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
+              <li><%= link_to "About Educentives", about_path %><li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -71,20 +71,22 @@
     <div class="container">
       <div class="content">
         <div class="row">
-           <div class="span9">
+          <div class="span9">
+            <div class="well">
               <%= yield %>
             </div>
-            <div class="span3">
-              <div class="well sidebar-nav">
-                <h3>Sidebar</h3>
-                <ul class="nav nav-list">
-                  <li class="nav-header">Sidebar</li>
-                  <li><%= link_to "Link1", "/path1"  %></li>
-                  <li><%= link_to "Link2", "/path2"  %></li>
-                  <li><%= link_to "Link3", "/path3"  %></li>
-                </ul>
-              </div><!--/.well -->
-            </div><!--/span-->
+          </div>
+          <div class="span3">
+            <div class="well sidebar-nav">
+              <h3>Sidebar</h3>
+              <ul class="nav nav-list">
+                <li class="nav-header">Sidebar</li>
+                <li><%= link_to "Link1", "/path1"  %></li>
+                <li><%= link_to "Link2", "/path2"  %></li>
+                <li><%= link_to "Link3", "/path3"  %></li>
+              </ul>
+            </div><!--/.well -->
+          </div><!--/span3-->
         </div><!--/row-->
       </div><!--/content-->
 
