--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -12,11 +12,9 @@ body {
   color: #888; 
   font-family: Arial,"Helvetica Neue",sans-serif;
   word-wrap: break-word; 
-  position:relative; }
-
-H2 {
-    font-size: 48px;
+  position:relative;
 }
+
 
 h1, h2, h3, h4, h5{
   background: url("/assets/background/linen-tile-trans.png") repeat scroll right top #F8F8F8;
@@ -34,6 +32,26 @@ h1, h2, h3, h4, h5{
 h3{
   line-height:1.7em;
   padding:0 2px 0 0;
+}
+
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+.uneditable-input {
+  height: 26px;
 }
 
 #content-wrapper{
@@ -122,7 +140,7 @@ fieldset{
 }
 
 .record-cntr input[type='text'], .record-cntr input[type='number'], .record-cntr input[type='password'], .record-cntr textarea, .wideform textarea, .wideform input[type='text']{ 
-  width:99%;
+  width:98%;
   border: solid 1px $med-blue;
   border-radius: 4px;
   line-height:24pt;
