--- a/app/views/home/_welcome.html.haml
+++ b/app/views/home/_welcome.html.haml
@@ -7,7 +7,7 @@
   %em could be sure?
 %h3 Educentives is about meeting goals
 %p If Tommy's homework is finished, his room is clean, he practiced his tennis swing and he's met his milestones toward his extracurricular objectives, he's earned some time to be left alone with his thumbs.  Tommy does not want to be interrupted to ask about these things, check his progress wall.  That's what he did before he picked up the game.  Why?  Because there's something in it for him, something he cares about, an incentive he doesn't have to thank you for later but wants right now.  He wants it bad enough that he'll manage his own time, wisely.  
-= link_to "More About Educentives", about_path
+= link_to content_tag(:i, "", :class => 'icon-circle-arrow-right') + " More About Educentives", about_path
 :javascript
   $(function() {
     $('#boy-gamer').transition({ rotate: '3deg' });
