--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
       <div class="content">
         <div class="row">
           <div class="span9">
-            <div class="well">
+            <div class="well" id="content-main">
               <% flash.each do |key, msg| %>
                 <%= content_tag :div, msg, :class => "flash_notice", :id => key %>
                 <script "text/javascript">
