--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -54,43 +54,37 @@ input[type="color"],
   height: 26px;
 }
 
-#content-wrapper{
-  position:relative;
-  width: 100%;
-}
-
 #content-main{
   background: #ffffff url("/assets/background/linen-tile-trans.png"); 
 }
-#main-content{
-  min-height: 20px;
-  padding: 10px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  
-}
 
-#content{
-  margin:0 auto;
-  width:960px;
-  background: image-url('/assets/background/forest-trail-transparent.png') no-repeat scroll bottom right $light-blue;
+#content-wrapper{
+  background:url('/assets/background/forest-trail-transparent.png') no-repeat scroll bottom right $light-blue;
   border-radius: 10px;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
-  position:relative;}
+  padding: 3px;
+}
 
+@media (max-width: 767px){
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  #content-wrapper{
+    padding:3px 0;
+  }
+}
+
+@media (min-width: 980px) and (max-width: 1199px) {
+  #content-wrapper{
+    padding:8px 0;
+  }
+}
+
+@media (min-width: 1200px){
+  #content-wrapper{
+    padding:10px 0;
+  }
+}
 
 #content-header{
    background: url("/assets/background/wide-gloss.png") no-repeat scroll center top;
