--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,6 @@
     <%= favicon_link_tag 'images/favicon.ico', :rel => 'shortcut icon' %>
     <%= javascript_include_tag "jquery" %>
 
-    
-
-
   </head>
   <body>
 
@@ -75,7 +72,7 @@
 
     <div class="container">
       <div class="content">
-        <div class="row">
+        <div class="row" id="content-wrapper">
           <div class="span9">
             <div class="well" id="content-main">
               <% flash.each do |key, msg| %>
@@ -100,8 +97,6 @@
               <ul class="nav nav-list">
                 <li class="nav-header">Sidebar</li>
                 <li><%= link_to "Goals", :controller => :goals, :action => :index %></li>
-                <li><%= link_to "Link2", "/path2"  %></li>
-                <li><%= link_to "Link3", "/path3"  %></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span3-->
